# soa-weather

./: .env.example  CLAUDE.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
claude/: CLAUDE.md
docs/: contributing.md  getting-started.md  index.md
docs/api/: clean.md  config.md  index.md  main.md  read.md  schema.md  utils.md  validate.md  write.md
docs/guide/: configuration.md  data-sources.md  overview.md
quarto/: .gitignore  _quarto.yml  portugal_storm_kristin.html  portugal_storm_kristin.qmd  storm_kristin_standalone.ipynb
scripts/: read_era5.py  read_ghcn_daily.py  read_station_data.py  texas_floods_example.py
src/soa_weather/: __init__.py  clean.py  config.py  main.py  read.py  schema.py  utils.py  validate.py  write.py
tests/: test_config.py  test_read.py  test_schema.py  test_utils.py  test_validate.py  test_write.py
