[project]
name = "soa-weather"
version = "1.1.0"
description = "Weather data analysis for the SOA Weather and Research group"
readme = "README.md"
license = "MIT"
authors = [
    { name = "realslimslaney", email = "bslaney7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "great-tables>=0.17.0",
    "cdsapi>=0.7.7",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "polars",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
]

[project.scripts]
weather = "soa_weather:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "ruff",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
src = ["src", "scripts"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
